dnl Process this file with autoconf to produce a configure script.
AC_INIT([goldenratio/goldenratio.c])
AC_CHECK_PROGS([MINGW32CC], [mingw32-gcc i586-mingw32msvc-cc], [no])
AC_SUBST([MINGW32CC])
AC_CHECK_PROGS([MINGW32AR], [mingw32-ar i586-mingw32msvc-ar], [no])
AC_SUBST([MINGW32AR])
AC_CONFIG_FILES([Makefile.config])
AC_OUTPUT
